<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.middleand.mobile.rccar.MainActivity"

    >


    <item android:id="@+id/action_main" android:icon="@drawable/ic_action_gamepad"
        android:title="@string/main_panel" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_map" android:icon="@drawable/ic_action_map"
        android:title="@string/action_map" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_camera" android:icon="@drawable/ic_action_video"
        android:title="@string/action_camera" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search" android:icon="@drawable/ic_action_search"
        android:title="@string/action_search" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:orderInCategory="100"
        android:title="@string/action_settings" app:showAsAction="never" />


</menu>
